--- a/pos.css
+++ b/pos.css
@@ -28,28 +28,65 @@ section {
   outline: 1px solid blue;
 }
 
-.conatiner {
+.container {
   width: 100%;
   height: 600px;
+  position: relative;
 }
 
 .element {
   width: 200px;
   height: 200px;
+  position: absolute;
+  /*opacity: 0.5;*/
 }
 
 .electric-purple {
   background: #c200fb;
+  bottom: 200px;
+  left: 200px;
+  z-index:2;
 }
 
 .raspberry {
   background: #ec0868;
+  bottom: 100px;
+  right: 100px;
+  z-index:3;
 }
 
 .ferrari-red {
   background: #fc2f00;
+  top:100px;
+  left:100px;
+  z-index:1;
 }
 
 .black {
   background: #000;
+  top:0;
+  left:0;
+  position:fixed;
+}
+
+.text-auf-bild {
+  position:relative;
+}
+
+.bild{
+  /*position:absolute;
+  bottom:0;
+  left:0;
+  können wir nach Markus rauslassen, da ihm nur wichtig war, dass wir Text auf Bild hinkriegen (und nicht Position unten links); momentan ist es auch von sich aus unten links, da die anderen kästchen den Platz oben einnehmen; aber wenn man die raus macht, und es unbedingt unten links sein soll, dann müsste man das so reinschreiben, aber dann vllt auch bei ".text-auf-bild" eine größe definieren, da dann ja keiner mehr in der Box ist?!?*/
+  border: yellow 5px solid; 
+}
+
+.text {
+  position:absolute;
+  background: black;
+  color:white;
+  left:20px;
+  bottom:20px;
+  z-index:1;
+  padding:5px;
 }
